# shadow-world

./: .dockerignore  .env.docker  .env.docker.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  llms-full.txt  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  agents.txt  config.py  db.py  main.py  pyproject.toml  vectorstore.py
backend/agents/: __init__.py  chat_agent.py  extraction_agent.py
backend/api/: __init__.py  agent.py  chat.py  knowledge.py  oauth.py  substrates.py  voice.py
backend/fetchers/: __init__.py  twitter.py  url_fetcher.py
backend/models/: __init__.py  chat.py  knowledge.py  social_account.py  substrate.py
backend/services/: __init__.py  agent_service.py  voice_service.py
docs/brainstorms/: 2026-02-06-voice-recording-brainstorm.md
prisma/: schema.prisma
prisma/migrations/20260206004549_init/: migration.sql
prisma/migrations/20260206034436_replace_endorsement_with_verification/: migration.sql
src/app/: layout.tsx
src/components/: SignOutButton.tsx
src/components/Chat/: ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  index.tsx
src/components/Community/: ShadowProfileCard.tsx  index.tsx
src/components/Create/: BasicInfoForm.tsx  ExtractionProgress.tsx  SocialLinker.tsx  index.tsx
src/components/Endorsement/: EndorseButton.tsx  EndorsementList.tsx  index.tsx
src/components/Knowledge/: AddKnowledgeModal.tsx  KnowledgeList.tsx  VoiceRecorder.tsx  index.tsx
src/components/Navigation/: index.tsx
src/lib/: substrate-api.ts
(+17 files in other folders)
