[project]
name = "substrate-backend"
version = "0.1.0"
description = "Substrate AI backend - FastAPI + LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.4.0",
    "cryptography>=42.0.0",
    "tweepy>=4.14.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "elevenlabs>=1.0.0",
    "mutagen>=1.47.0",
    "python-multipart>=0.0.7",
]

[project.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
